# dissect

./: Cargo.toml  README.md
src/: .main.rs.swm  .main.rs.swn  .main.rs.swo  .main.rs.swp  .structs.rs.swo  .structs.rs.swp  lib.rs  main.rs
src/elf/: .enumerations.rs.swp  .mod.rs.swp  .structures.rs.swp  .types.rs.swp  enumerations.rs  errors.rs  mod.rs  structures.rs  types.rs
src/utility_functions/: arrays.rs
